Compositor: Missing output UI for Normal node #96860

Closed
opened 2022-03-29 18:01:35 +02:00 by Ludovic k · 9 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce 840M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: version 3.0.1
Short description of error
On Blender 3.1, the node "Normal" on the compositing part don't seems to work properly :

It work as expected on 3.0 and previous versions.

Exact steps for others to reproduce the error
On node compositing, simply add a "Normal" node (Vector > Normal).

Capture d'écran 2022-03-29 17.54.56.png

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce 840M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: version 3.0.1 **Short description of error** On Blender 3.1, the node "Normal" on the compositing part don't seems to work properly : - It output nothing - It's visually incomplete with the rotating ball removed (and technically different from the official documentation) Doc: https://docs.blender.org/manual/en/latest/compositing/types/vector/normal.html It work as expected on 3.0 and previous versions. **Exact steps for others to reproduce the error** On node compositing, simply add a "Normal" node (Vector > Normal). ![Capture d'écran 2022-03-29 17.54.56.png](https://archive.blender.org/developer/F12954244/Capture_d_écran_2022-03-29_17.54.56.png)
Author

Added subscriber: @zbludo

Added subscriber: @zbludo
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm, checking

Thanks for the report. I can confirm, checking
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

After 5ef5a9fc24, separate inputs were there for Normal output
image.png
Then later some change removed Normal output from the node itself (between 644eb68524 - b7e151d876)
@Blendify , is this something for you?

After 5ef5a9fc24, separate inputs were there for `Normal` output ![image.png](https://archive.blender.org/developer/F12955837/image.png) Then later some change removed Normal output from the node itself (between 644eb68524b9 - b7e151d876e7) @Blendify , is this something for you?
Pratik Borhade changed title from "Compositing Normal node" not working properly to Compositor: Missing output UI for Normal node 2022-03-30 08:03:49 +02:00
Aaron Carlisle self-assigned this 2022-03-30 12:44:58 +02:00

This issue was referenced by ccecd97c8c

This issue was referenced by ccecd97c8c41e32f0c4212c48195f80163e850ab

This issue was referenced by ecafa4c27c

This issue was referenced by ecafa4c27c67bda074217adba81a0d211c764370
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96860
No description provided.